Bug 128767 - CRASH: Clicking on Export Directly to PDF (gen)
Summary: CRASH: Clicking on Export Directly to PDF (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.3.4.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-11-13 09:50 UTC by Xisco Faulí
Modified: 2020-01-08 09:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-13 09:50:58 UTC
Steps to reproduce:
1. Open Calc or Writer
2. Click on Export Directly to PDF button

-> Crash

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: 26b7ff2b6cc4def8ff7b02e223961534ba88e654
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-11-13 09:51:53 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=09e3d45cdc5c739e5246388a83ccfc6d76bf66e9

author	Caolán McNamara <caolanm@redhat.com>	2019-10-21 14:20:12 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-10-29 13:58:47 +0100
commit 09e3d45cdc5c739e5246388a83ccfc6d76bf66e9 (patch)
tree 5ae533f38a626016951b02e7d2406c368b298723
parent 93a641d291adf86491cc68ac64f4f614c937183a (diff)
weld fpicker cluster

Bisected with: bibisect-linux64-6.4

Adding Cc: to Caolán McNamara
Comment 2 Commit Notification 2019-11-13 11:51:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e524f3f9d616b04fdd7d994ad1a1ec65ab6bb2a7

Resolves: tdf#128767 fpicker sets labels on buttons as well as labels

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-11-14 11:34:02 UTC
Verified in

Version: 6.4.0.0.beta1+
Build ID: 956153105bbf900f3b20aea98338148cf545fa0e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 4 Martina 2020-01-08 07:59:33 UTC
Hello,
I have the same problem with LibreOffice, but in the Draw component.

Steps to reproduce:
1. Open Draw file with family tree - page format e.g. A1 or A0, file size 779KiB
2. Click on menu item "Export as" - "Export as PDF" or "Export Directly as PDF" 

-> Spontaneous restart of computer

Reproduced in:

Version: 6.3.4.2.0+
Build ID: 6.3.4-1
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk2; 
Locale: cs-CZ (cs_CZ.utf8); UI-Language: en-US
Calc: threaded

Version: 6.4.0.0.beta1
Build ID: 4d7e5b0c40ed843384704eca3ce21981d4e98920
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: cs-CZ (cs_CZ.utf8); UI-Language: en-US
Calc: threaded

Linux version 5.3.13-arch1-1 (linux@archlinux) (gcc version 9.2.0 (GCC)

Please, is it possible to repair also this type of bug?
Thank you in advance.
Best Regards
Martina
Comment 5 Martina 2020-01-08 09:16:34 UTC
(In reply to Martina from comment #4)

Hello,
I apologize for previous message. 
I tried it again with 6.4.0.0.beta1 version and it works. I am sorry, but I am not able to reproduce its behaviour from yesterday.
Maybe my computer needed turn-off for the night...

Thank you very much for your repairs and have a nice day :)
M.