Resolves: tdf#128767 fpicker sets labels on buttons as well as labels

Change-Id: Iedd543fe20cd713d49a9d62c256942639e44adf6